# pedro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
pedro/: __init__.py  config.py
pedro/agents/: deps.py  graph.py  schemas.py  state.py
pedro/agents/nodes/: dispatcher.py  gates.py  planner_cold.py  planner_plus.py  researcher.py  scout.py  synthesizer.py
pedro/agents/prompts/: planner.py  researcher.py  scout.py  synthesizer.py
pedro/api/: app.py  routes.py  session.py  sse.py
pedro/llm/: client.py
pedro/web/: app.js  index.html  style.css
tests/integration/: test_api_sse.py  test_graphs.py
tests/smoke/: test_real_api_smoke.py
tests/unit/: test_dispatcher_synthesizer.py  test_llm_client.py  test_planners.py  test_researcher.py  test_schemas.py  test_scout_node.py  test_sse.py
